# taihen-parser-alt

./: .gitignore  CMakeLists.txt  README.md
taihen-parser-alt/: CMakeLists.txt
taihen-parser-alt/include/taihen/: lexer.h  parser.h
taihen-parser-alt/src/: lexer.c  parser.c
taihen-parser-bench/: CMakeLists.txt  bench1.c  data.h  main.c
